src/components/resume/resume.scss
@import 'node_modules/nord/src/sass/nord.scss';

.resume-container {
	display: flex;
	padding: 0 5%;
	flex-direction: column;
	height: 100vh;

	.resume-header {
		display: flex;
		width: 100%;
		flex-direction: row-reverse;
		align-items: center;
		justify-content: space-between;

		.resume-title {
			display: flex;
			flex-direction: column;
			align-items: flex-end;
			&-text {
				font-size: 170px;
				margin: 10% auto;
				color: $nord7;
				font-weight: 300;
				letter-spacing: 0.5rem;
			}

			&-btn {
				//
			}
		}

		&-content {
			ul {
				display: flex;
				flex-direction: column;
				gap: 20px;
				padding: 0;
				li {
					list-style-type: none;
				}
			}
		}
	}

	.resume-sub-content {
		text-align: center;
	}

	.resume-main-content {
		padding: 0 10%;
		display: flex;
		border-top: 1px solid $nord4;
		overflow-y: auto;

		&-left {
			flex: 1;
			max-width: 60%;
			h2 {
				font-size: 80px;
				color: $nord12;
				font-weight: 500;
				letter-spacing: 0.3rem;
				margin: 5% auto;
			}
			&-entry {
				.entry-title {
					font-size: larger;
					margin-bottom: 8px;
					letter-spacing: 0.03rem;
					span {
						color: $nord13;
						font-weight: 600;
					}
					a {
						font-weight: 500;
					}
				}

				.entry-subtitle {
					font-size: smaller;
					margin: 5px auto;
					color: $nord4;
					letter-spacing: 0.02rem;
					font-weight: 400;
				}
			}
		}
		&-right {
			display: flex;
			flex-direction: column;
			text-align: end;
			h3 {
				font-size: 65px;
				color: $nord12;
				font-weight: 500;
				letter-spacing: 0.3rem;
				margin: 5% 0;
			}
		}
	}

	.contact-container {
		text-align: center;
	}
}

